# retrosheet-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: event.rs  game.rs  lib.rs  parser.rs  parsers.rs
test_resources/: 2015BAL.EVA  2016CHN.EVN  2017MIL.EVN  BOS201504270.EVA  CHN201604110.EVN
tests/: test_multiple_games.rs  test_single_game.rs
